# ScheduLink

./: Cargo.toml  Dockerfile  README.md
src/: handlers.rs  main.rs
src/handlers/: base.rs  event.rs
src/handlers/event/: app_error.rs  date_time.rs  delete.rs  get.rs  mod.rs  post.rs  put.rs
