[package]
name = "ScheduLink"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = {version = "0.4.31", features = ["serde"]}
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.34.0", features = ["full"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
